# BotStarterKit

./: Cargo.toml  Makefile
big_hero_echo/: Cargo.toml
big_hero_echo/src/: dynamo.rs  main.rs  sns.rs
point6_deploy/: cdk.json  package-lock.json  package.json
point6_deploy/lib/: point6_deploy-stack.ts
point6_deploy/test/: point6_deploy.test.ts
point6_slack/: Cargo.toml
point6_slack/src/: auth.rs  main.rs
slevr/: Cargo.toml
slevr/src/: lib.rs
slevr/src/client/: mod.rs
slevr/src/client/chat/: post_message.rs
slevr/src/events/: mod.rs
