[package]
name = "big_hero_echo"
version = "0.1.0"
authors = ["Chris Emery <chris@menagerie.house>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda={git="https://github.com/emeryc/aws-lambda-rust-runtime"}
serde="1.0.104"
serde_json="1.0.48"
log="0.4.8"
simple_logger="1.6.0"
slevr={path="../slevr"}
tokio="0.2.13"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"