[package]
name = "slevr"
version = "0.1.0"
authors = ["Chris Emery <chris@menagerie.house>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hyper="0.14.10"
hyper-rustls="0.20.0"
log="0.4.8"